# my-proxygl32

./: LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/proxy_gl32/: CMakeLists.txt  opengl32.cpp  opengl32.def  opengl32_asm.asm  proxy_gl32.h
